# routes/api.php
@@ -1,0 +1,11 @@
+<?php
+
+use App\Http\Controllers\NotesApiController;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Route;
+
+Route::get('/user', function (Request $request) {
+    return $request->user();
+})->middleware('auth:sanctum');
+
+Route::resource('note', NotesApiController::class);
